// Code generated by template. DO NOT EDIT.
syntax = "proto3";

package receiptpb;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

option go_package = "./receiptpb";

message Model {
  uint64 id = 1;
  string externalIdentifier = 2;
  google.protobuf.Timestamp dateTime = 3;
  uint64 operatorID = 4;
  uint64 sellerPlaceID = 5;
  int64 fiscalDocumentNumber = 6;
  string fiscalDriveNumber = 7;
  int64 fiscalSign = 8;
  int32 sum = 9;
  string kktReg = 10;
  string buyerPhoneOrAddress = 11;
}

message GetListRequest {
  int32 page_size = 1;
  int32 page = 2;
  string sort_by = 3;
  string sort_order = 4;
  // filters
  string external_identifier = 5;
  google.protobuf.Timestamp date_time_start = 6;
  google.protobuf.Timestamp date_time_end = 7;
  uint64 operatorID = 8;
  uint64 sellerPlaceID = 9;
  int64 fiscal_document_number_gt = 10;
  int64 fiscal_document_number_lt = 11;
  string fiscal_drive_number = 12;
  int64 fiscal_sign_gt = 13;
  int64 fiscal_sign_lt = 14;
  int32 sum_gt = 15;
  int32 sum_lt = 16;
  string kkt_reg = 17;
  string buyer_phone_or_address = 18;
}

message GetListResponse {
  int64 total = 1;
  repeated Model items = 2;
}

message GetItemRequest {
  uint64 id = 1;
}

message GetItemResponse {
  Model item = 1;
}

message CreateItemRequest {
  Model item = 1;
}

message CreateItemResponse {
  Model item = 1;
}

message UpdateItemRequest {
  uint64 id = 1;
  Model item = 2;
}

message UpdateItemResponse {
  Model item = 1;
}

message DeleteItemRequest {
  uint64 id = 1;
}

message DeleteItemResponse {
}

service ModelService {
  rpc GetList (GetListRequest) returns (GetListResponse) {
    option (google.api.http) = {
      get: "/api/v1/receipts"
    };
  }
  rpc GetItem (GetItemRequest) returns (GetItemResponse) {
    option (google.api.http) = {
      get: "/api/v1/receipts/{id}"
    };
  }
  rpc CreateItem (CreateItemRequest) returns (CreateItemResponse) {
    option (google.api.http) = {
      post: "/api/v1/receipts"
      body: "item"
    };
  }
  rpc UpdateItem (UpdateItemRequest) returns (UpdateItemResponse) {
    option (google.api.http) = {
      post: "/api/v1/receipts/{id}"
      body: "item"
      additional_bindings {
        patch: "/api/v1/receipts/{id}"
        body: "item"
      }
    };
  }
  rpc DeleteItem (DeleteItemRequest) returns (DeleteItemResponse) {
    option (google.api.http) = {
      delete: "/api/v1/receipts/{id}"
    };
  }
}
